Add gluon distribution and coupling to string representation of context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ set(LIBS ${LIBS} ${GSL_LIBRARIES})
 
 set(LIBS ${LIBS} m)
 
-add_executable(oneloopcalc oneloopcalc.cpp integrator.cpp hardfactors_position.cpp hardfactors_momentum.cpp dss_pinlo.cpp mstwpdf.cc cubature.c gluondist.cpp integrationcontext.cpp integrationtype.cpp context.cpp utils.cpp)
+add_executable(oneloopcalc oneloopcalc.cpp integrator.cpp hardfactors_position.cpp hardfactors_momentum.cpp dss_pinlo.cpp mstwpdf.cc cubature.c gluondist.cpp coupling.cpp integrationcontext.cpp integrationtype.cpp context.cpp utils.cpp)
 target_link_libraries(oneloopcalc ${CMAKE_SOURCE_DIR}/libinterp2d.a ${LIBS})
 
-add_executable(contextreader context.cpp utils.cpp gluondist.cpp)
+add_executable(contextreader context.cpp utils.cpp coupling.cpp gluondist.cpp)
 target_link_libraries(contextreader ${CMAKE_SOURCE_DIR}/libinterp2d.a ${LIBS})
 set_target_properties(contextreader PROPERTIES COMPILE_DEFINITIONS CONTEXT_TEST)
 
