--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(LIBS ${LIBS} ${GSL_LIBRARIES})
 set(LIBS ${LIBS} m)
 
 add_executable(oneloopcalc oneloopcalc.cpp integrator.cpp hardfactors_position.cpp hardfactors_momentum.cpp dss_pinlo.cpp mstwpdf.cc cubature.c gluondist.cpp coupling.cpp integrationcontext.cpp integrationtype.cpp context.cpp utils.cpp)
-target_link_libraries(oneloopcalc ${CMAKE_SOURCE_DIR}/libinterp2d.a ${LIBS})
+target_link_libraries(oneloopcalc ${CMAKE_SOURCE_DIR}/libinterp2d.a ${CMAKE_SOURCE_DIR}/libquasimontecarlo.a ${LIBS})
 
 add_executable(contextreader context.cpp utils.cpp coupling.cpp gluondist.cpp)
 target_link_libraries(contextreader ${CMAKE_SOURCE_DIR}/libinterp2d.a ${LIBS})
