--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ add_custom_target(git_revision.h
     COMMAND git diff-index --quiet HEAD || echo "#define GIT_DIRTY" >> git_revision.h
     WORKING_DIRECTORY ${oneloopcalc_SOURCE_DIR} VERBATIM)
 
-include_directories(${SOLO_SOURCE_DIR}/interp2d ${SOLO_SOURCE_DIR}/quasimontecarlo)
+include_directories(${interp2d_SOURCE_DIR} ${quasimontecarlo_SOURCE_DIR})
     
 add_executable(oneloopcalc oneloopcalc.cpp integrator.cpp hardfactors_position.cpp hardfactors_radial.cpp hardfactors_momentum.cpp dss_pinlo.cpp mstwpdf.cc cubature.c gluondist.cpp coupling.cpp factorizationscale.cpp integrationcontext.cpp integrationtype.cpp context.cpp utils.cpp)
 target_link_libraries(oneloopcalc interp2d quasimontecarlo ${LIBS})
@@ -26,10 +26,10 @@ add_executable(contextreader context.cpp utils.cpp coupling.cpp gluondist.cpp fa
 target_link_libraries(contextreader interp2d ${LIBS})
 set_target_properties(contextreader PROPERTIES COMPILE_DEFINITIONS CONTEXT_TEST)
 
-add_executable(utils_test utils.cpp)
+add_executable(utils_test EXCLUDE_FROM_ALL utils.cpp)
 set_target_properties(utils_test PROPERTIES COMPILE_DEFINITIONS UTILS_TEST)
 
-add_executable(dss_pinlo_test dss_pinlo_test.cpp dss_pinlo.cpp)
+add_executable(dss_pinlo_test EXCLUDE_FROM_ALL dss_pinlo_test.cpp dss_pinlo.cpp)
 target_link_libraries(dss_pinlo_test interp2d ${LIBS})
 
 add_executable(gluondist gluondist_driver.cpp gluondist.cpp context.cpp utils.cpp coupling.cpp factorizationscale.cpp)
