--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,10 @@ find_package(GSL REQUIRED)
 include_directories(${GSL_INCLUDE_DIRS})
 set(LIBS ${LIBS} ${GSL_LIBRARIES})
 
+find_package(MuParser REQUIRED)
+include_directories(${MUPARSER_INCLUDE_DIRS})
+set(LIBS ${LIBS} ${MUPARSER_LIBRARIES})
+
 set(LIBS ${LIBS} m)
 
 find_package(Git)
@@ -21,10 +25,10 @@ else()
     add_custom_target(git_revision.h echo >> git_revision.h WORKING_DIRECTORY ${oneloopcalc_SOURCE_DIR} VERBATIM)
 endif()
 
-include_directories(${interp2d_SOURCE_DIR} ${quasimontecarlo_SOURCE_DIR})
+include_directories(${gslmuparser_SOURCE_DIR} ${interp2d_SOURCE_DIR} ${quasimontecarlo_SOURCE_DIR})
 
 add_executable(oneloopcalc oneloopcalc.cpp integrator.cpp hardfactors_position.cpp hardfactors_radial.cpp hardfactors_momentum.cpp dss_pinlo.cpp mstwpdf.cc cubature.c gluondist.cpp coupling.cpp factorizationscale.cpp integrationcontext.cpp integrationtype.cpp context.cpp utils.cpp)
-target_link_libraries(oneloopcalc interp2d quasimontecarlo ${LIBS})
+target_link_libraries(oneloopcalc gslmuparser interp2d quasimontecarlo ${LIBS})
 add_dependencies(oneloopcalc git_revision.h)
 
 add_executable(contextreader context.cpp utils.cpp coupling.cpp gluondist.cpp factorizationscale.cpp)
