--- a/src/oneloopcalc/CMakeLists.txt
+++ b/src/oneloopcalc/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(oneloopcalc
     ${SOLO_SOURCE_DIR}/factorizationscale.cpp
     ${SOLO_SOURCE_DIR}/configuration/context.cpp
     ${SOLO_SOURCE_DIR}/hardfactors/hardfactor_parsed.cpp
+    ${SOLO_SOURCE_DIR}/hardfactors/hardfactor_parser.cpp
     ${SOLO_SOURCE_DIR}/hardfactors/hardfactor_group_parser.cpp
     ${SOLO_SOURCE_DIR}/hardfactors/hardfactors_position.cpp
     ${SOLO_SOURCE_DIR}/hardfactors/hardfactors_radial.cpp
