Generalize ThreadLocalContext to not require PDF and FF filenames
This commit changes ThreadLocalContext to only include constructors
that take a Context or ContextCollection as parameters. The old
constructor that took filenames for the PDF and FF files directly
is now gone. This will allow generalizing the code to use other
sources for the PDFs and FFs in addition to just the MSTW and DSS
data files, or even to running computations without the PDFs and
FFs at all.

In order to make this change, the implementation of ThreadLocalContext
was moved into context.cpp and the CMakeLists.txt was updated to
include the proper dependencies on the DSS and MSTW source files.

--- a/src/configuration/CMakeLists.txt
+++ b/src/configuration/CMakeLists.txt
@@ -10,8 +10,9 @@ include_directories(${interp2d_SOURCE_DIR} ${quasimontecarlo_SOURCE_DIR})
 
 add_executable(contextreader
   context.cpp
+  ${SOLO_SOURCE_DIR}/mstwpdf.cc
   ${SOLO_SOURCE_DIR}/utils/utils.cpp
   ${SOLO_SOURCE_DIR}/coupling.cpp
   ${SOLO_SOURCE_DIR}/factorizationscale.cpp)
-target_link_libraries(contextreader interp2d gdist ${LIBS})
+target_link_libraries(contextreader dsspinlo interp2d gdist ${LIBS})
 set_target_properties(contextreader PROPERTIES COMPILE_DEFINITIONS CONTEXT_TEST)
