--- a/src/hardfactors/CMakeLists.txt
+++ b/src/hardfactors/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(hfparser
     hfparser.cpp
     hardfactor.cpp
     hardfactor_parsed.cpp
-    hardfactor_parser.cpp
+    parsing.cpp
     ${SOLO_SOURCE_DIR}/integration/integrationtype.cpp
     ${SOLO_SOURCE_DIR}/integration/integrationcontext.cpp
     ${SOLO_SOURCE_DIR}/mstwpdf.cc
