Consolidate parsing code into parsing.{h,cpp}

--- a/src/hardfactors/hardfactors.cfg
+++ b/src/hardfactors/hardfactors.cfg
@@ -24,7 +24,7 @@ type = momentumxip1
 order = nlo
 Fd real = -Nc*alphas_2pi*Sperp * qqfactor/z2 * ((1+xiprime2) * ln(((q1x - (1-xiprime)*kT)^2 + q1y^2)/kT2) - 2*ln(q12/kT2)) / (1 - xiprime) * Fk * Fkq1
 
-m.h14qq = h14qqs, h14qqd
+h14qq.m = h14qqs, h14qqd
 
 name = h02gg
 type = momentum1
@@ -53,7 +53,7 @@ type = momentumxip2
 order = nlo
 Fd real = -4*alphas_2pi*Nc*Sperp * ggfactor/z2 * Fq1 * F((q1x+kT)^2 + q1y^2, Ya) * F((q1x+q2x)^2 + (q1y+q2y)^2, Ya) * ((xiprime * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2) - ln(((q2x-kT)^2 + q2y^2)/kT2))/(1 - xiprime) + 0.5 * xiprime * (1-xiprime) * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2))
 
-m.h16gg = h16ggs,h16ggd
+h16gg.m = h16ggs,h16ggd
 
 name = h112gq
 type = radial dipole
@@ -84,3 +84,8 @@ name = h14qg
 type = momentum2
 order = nlo
 Fn real = -alphas_2pi/pi * qgfactor/z2 * ((1 - 2*xi + 2*xi2)/xi) * Fkq1 * F((kT*(xi-1)/xi - q1x + q2x)^2 + (-q1y+q2y)^2, Ya) * ((q1x*q2x + q1y*q2y)/(q12*q22))
+
+lo:h02qq.m,h02gg.m
+nlo.std:h12qq.r,h14qq.m,h12gg.r,h12qqbar.m,h16gg.m,h112gq.r,h122gq.r,h14gq.m,h112qg.r,h122qg.r,h14qg.m
+nlo:h12qq.r,h14qq.m,h12gg.r,h12qqbar.m,h16gg.m,h112gq.r,h122gq.r,h14gq.m,h112qg.r,h122qg.r,h14qg.m
+
