Add momentum space implementations of problematic hard factors

--- a/src/hardfactors/hardfactors.cfg
+++ b/src/hardfactors/hardfactors.cfg
@@ -31,12 +31,38 @@ type = momentum1
 order = lo
 Fd real = Sperp * ggfactor/z2 * Fq1 * Fkq1
 
-name = h12gg
+name = h12ggs
+type = radial momentum2
+order = nlo
+Fs real = 1/pi*alphas_2pi*Nc*ggfactor/z2 * 2*xi * (F(square(kT+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * Fkq2 * Fq2 + (F(square(kT/xi+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * F(square(kT/xi-q2x, q2y), Ya) * Fq2)/xi2) / q12
+
+name = h12ggs
 type = radial dipole
 order = nlo
 Fs real = 1/(2*pi)^2*alphas_2pi*Nc*ggfactor/z2 * S2r^2 * 2*xi * (-2*euler_gamma - ln(r2*mu2/4)) * (J(0, kT*sqrt(r2)) + J(0, kT*sqrt(r2)/xi)/xi2)
+
+name = h12ggn
+type = radial momentum2
+order = nlo
+Fn real = 1/pi*alphas_2pi*Nc*ggfactor/z2 * 2*(1/xi - 1 + xi - xi2) * (F(square(kT+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * Fkq2 * Fq2 + (F(square(kT/xi+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * F(square(kT/xi-q2x, q2y), Ya) * Fq2)/xi2) / q12
+
+name = h12ggn
+type = radial dipole
+order = nlo
 Fn real = 1/(2*pi)^2*alphas_2pi*Nc*ggfactor/z2 * S2r^2 * 2*(1/xi - 1 + xi - xi2) * (-2*euler_gamma - ln(r2*mu2/4)) * (J(0, kT*sqrt(r2)) + J(0, kT*sqrt(r2)/xi)/xi2)
+
+name = h12ggd
+type = radial momentum2
+order = nlo
+Fd real = 1/pi*alphas_2pi*Nc*ggfactor/z2 * (11/6 - 2*Nf*TR/(3*Nc)) * ((F(square(kT+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * Fkq2 * Fq2 + (F(square(kT/xi+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * F(square(kT/xi-q2x, q2y), Ya) * Fq2)/xi2) - 2*(F(square(kT+q1x-q2x, q1y-q2y), Ya) * Fq2 - J(0, sqrt(q12)/kT*2*exp(-euler_gamma)) * Fkq2 * Fq2)) / q12
+
+name = h12ggd
+type = radial dipole
+order = nlo
 Fd real = -1/(2*pi)^2*alphas_2pi*Nc*ggfactor/z2 * S2r^2 * (11/6 - 2*Nf*TR/(3*Nc)) * ((2*euler_gamma + ln(r2*mu2/4))*(J(0,kT*sqrt(r2)) + J(0,kT*sqrt(r2)/xi)/xi2) - 2*(2*euler_gamma + ln(r2*kT2/4))*(J(0,kT*sqrt(r2))))
+
+h12gg.m = h12ggs.m,h12ggn.m,h12ggd.m
+h12gg.r = h12ggs.r,h12ggn.r,h12ggd.r
 
 name = h12qqbar
 type = momentumxip1
@@ -54,6 +80,11 @@ order = nlo
 Fd real = -4*alphas_2pi*Nc*Sperp * ggfactor/z2 * Fq1 * F((q1x+kT)^2 + q1y^2, Ya) * F((q1x+q2x)^2 + (q1y+q2y)^2, Ya) * ((xiprime * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2) - ln(((q2x-kT)^2 + q2y^2)/kT2))/(1 - xiprime) + 0.5 * xiprime * (1-xiprime) * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2))
 
 h16gg.m = h16ggs,h16ggd
+
+name = h112gq
+type = radial momentum1
+order = nlo
+Fn real = -1/pi*alphas_2pi*0.5*Nc*Sperp * gqfactor/z2 * (1 + (1-xi)^2)/(xi^3) * (F(kT2/xi2, Ya) * J(0,2*exp(-euler_gamma)/sqrt(mu2)*sqrt(q12)) - F(square(kT/xi - q1x, -q1y), Ya)) / q12
 
 name = h112gq
 type = radial dipole
