Use the default implementations of hard factors in lo and nlo groups

--- a/src/hardfactors/hardfactors.cfg
+++ b/src/hardfactors/hardfactors.cfg
@@ -116,7 +116,6 @@ type = momentum2
 order = nlo
 Fn real = -alphas_2pi/pi * qgfactor/z2 * ((1 - 2*xi + 2*xi2)/xi) * Fkq1 * F((kT*(xi-1)/xi - q1x + q2x)^2 + (-q1y+q2y)^2, Ya) * ((q1x*q2x + q1y*q2y)/(q12*q22))
 
-lo:h02qq.m,h02gg.m
-nlo.std:h12qq.r,h14qq.m,h12gg.r,h12qqbar.m,h16gg.m,h112gq.r,h122gq.r,h14gq.m,h112qg.r,h122qg.r,h14qg.m
-nlo:h12qq.r,h14qq.m,h12gg.r,h12qqbar.m,h16gg.m,h112gq.r,h122gq.r,h14gq.m,h112qg.r,h122qg.r,h14qg.m
+lo:h02qq,h02gg
+nlo:h12qq,h14qq,h12gg,h12qqbar,h16gg,h112gq,h122gq,h14gq,h112qg,h122qg,h14qg
 
