--- a/src/hardfactors/hardfactors.cfg
+++ b/src/hardfactors/hardfactors.cfg
@@ -8,6 +8,18 @@ type = radial dipole
 order = lo
 Fd real = 1/(2*pi)^2*Sperp*qqfactor/z2*S2r*J(0, kT*sqrt(r2))
 
+name = h12qqs
+type = radial momentum1
+order = nlo
+Fs real = alphas_2pi*CF*Sperp * qqfactor/z2 * (1 + xi2) / (pi * q12) * ( (Fkq1 - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * Fk) + (F(square(kT/xi - q1x, -q1y), Ya) - J(0, sqrt(q12/mu2)*2*exp(-euler_gamma)) * F(kT2/xi2, Ya)) / xi2 )
+
+name = h12qqd
+type = none
+order = nlo
+Fd real = 3*alphas_2pi*CF*Sperp * qqfactor/z2 * Fk * ln(kT2/mu2)
+
+h12qq.m = h12qqs, h12qqd
+
 name = h12qq
 type = radial dipole
 order = nlo
@@ -92,6 +104,11 @@ order = nlo
 Fn real = -1/(2*pi)^2*alphas_2pi*0.5*Nc * gqfactor/z2 * S2r * (1 + (1-xi)^2)/(xi^3) * (2*euler_gamma + ln(r2*mu2/4)) * J(0,kT*sqrt(r2)/xi)
 
 name = h122gq
+type = radial momentum2
+order = nlo
+Fn real = alphas_2pi*0.5*Nc * gqfactor/z2 * (1 + (1-xi)^2)/xi / (pi * q12) * (F(square(kT - q1x - q2x, -q1y - q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2) * 2*exp(-euler_gamma)) * F(square(kT - q2x, -q2y), Ya) * Fq2)
+
+name = h122gq
 type = radial dipole
 order = nlo
 Fn real = -1/(2*pi)^2*alphas_2pi*0.5*Nc * gqfactor/z2 * S2r^2 * (1 + (1-xi)^2)/xi * (2*euler_gamma + ln(r2*mu2/4)) * J(0,kT*sqrt(r2))
@@ -101,10 +118,34 @@ type = momentum2
 order = nlo
 Fn real = -alphas_2pi*Nc/pi * gqfactor/z2 * ((2 - 2*xi + xi2)/xi2) * F((kT/xi+q1x)^2 + q1y^2, Ya) * F((kT*(xi-1)/xi - q1x + q2x)^2 + (-q1y+q2y)^2, Ya) * ((q1x*q2x + q1y*q2y)/(q12*q22))
 
+name = h112qgfourier
+type = radial momentum1
+order = nlo
+Fn real = 1/2*alphas_2pi*Sperp/z2 * qgfactor * (1 - 2*xi + 2*xi2) * (Fkq1 - J(0, sqrt(q12/mu2) * 2*exp(-euler_gamma)) * Fk) / (pi * q12)
+
+name = h112qgconst
+type = none
+order = nlo
+Fn real = -1/2*alphas_2pi*Sperp/z2 * qgfactor * (1 - 2*xi + 2*xi2) * Fk
+
+h112qg.m = h112qgfourier + h112qgconst
+
 name = h112qg
 type = radial dipole
 order = nlo
 Fn real = -1/(8*pi^2)*alphas_2pi*Sperp/z2 * qgfactor * S2r * (1 - 2*xi + 2*xi2) * (2*euler_gamma + ln(r2*mu2/4) + 1) * J(0,kT*sqrt(r2))
+
+name = h122qgfourier
+type = radial momentum2
+order = nlo
+Fn real = 1/2*alphas_2pi*Sperp * qgfactor/z2 * (1/xi2 - 2/xi + 2) * (F(square(kT/xi - q1x - q2x, -q1y - q2y), Ya) * Fq2 - J(0, sqrt(q12/mu2) * 2*exp(-euler_gamma)) * F(square(kT/xi - q2x, -q2y), Ya) * Fq2) / (pi * q12)
+
+name = h122qgconst
+type = radial momentum1
+order = nlo
+Fn real = -1/2*alphas_2pi*Sperp * qgfactor/z2 * (1/xi2 - 2/xi + 2) * F(square(kT/xi - q1x, -q1y), Ya) * Fq1
+
+h122qg.m = h122qgfourier + h122qgconst
 
 name = h122qg
 type = radial dipole
