--- a/src/hardfactors/hardfactors.cfg
+++ b/src/hardfactors/hardfactors.cfg
@@ -89,7 +89,7 @@ Fs real = -4/pi*alphas_2pi*Nc*Sperp * ggfactor/z2 * ((1 - xi + xi2)^2/xi2) * ((q
 name = h16ggd
 type = momentumxip2
 order = nlo
-Fd real = -4*alphas_2pi*Nc*Sperp * ggfactor/z2 * Fq1 * F((q1x+kT)^2 + q1y^2, Ya) * F((q1x+q2x)^2 + (q1y+q2y)^2, Ya) * ((xiprime * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2) - ln(((q2x-kT)^2 + q2y^2)/kT2))/(1 - xiprime) + 0.5 * xiprime * (1-xiprime) * ln(((q2x-xiprime*kT)^2 + q2y^2)/kT2))
+Fd real = -4*alphas_2pi*Nc*Sperp * ggfactor/z2 * Fq1 * F(square(q1x+kT, q1y), Ya) * F(square(q1x+q2x, q1y+q2y), Ya) * ((xiprime * ln(square(q2x-xiprime*kT, q2y)/kT2) - ln(square(q2x-kT, q2y)/kT2))/(1 - xiprime) + 0.5 * xiprime * (1-xiprime) * ln(square(q2x-xiprime*kT, q2y)/kT2))
 
 h16gg.m = h16ggs,h16ggd
 
