--- a/src/hardfactors/CMakeLists.txt
+++ b/src/hardfactors/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(${gslmuparser_SOURCE_DIR} ${interp2d_SOURCE_DIR})
 add_executable(hfparser
     hfparser.cpp
     hardfactor.cpp
-    hardfactor_parsed.cpp
+    hardfactor_parser.cpp
     ${SOLO_SOURCE_DIR}/integration/integrationtype.cpp
     ${SOLO_SOURCE_DIR}/integration/integrationcontext.cpp
     ${SOLO_SOURCE_DIR}/mstwpdf.cc
