--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,7 @@ include_directories(${OPENSSL_INCLUDE_DIR})
 set(LIBS ${LIBS} ${OPENSSL_LIBRARIES})
 
 link_directories(${GSL_LIBRARY_DIRS})
-add_executable(kovr kov-position/gauleg.cpp kov-position/interr.cpp kov-position/kovr.cpp)
-target_link_libraries(kovr m)
+add_subdirectory(bksolution)
 add_subdirectory(configuration)
 add_subdirectory(dss_pinlo)
 add_subdirectory(gluondist)
