Add install rules to CMakeLists.txt's
I'm not sure if the rules are all written correctly, so please file bug
reports if something goes wrong when you try to use them. (If anyone's
reading this)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,15 @@ set(LIBS ${LIBS} ${OPENSSL_LIBRARIES})
 link_directories(${GSL_LIBRARY_DIRS})
 add_executable(kovr kov-position/gauleg.cpp kov-position/interr.cpp kov-position/kovr.cpp)
 target_link_libraries(kovr m)
+
+install(TARGETS kovr
+ RUNTIME DESTINATION bin
+ LIBRARY DESTINATION lib
+ ARCHIVE DESTINATION lib
+ COMPONENT executables
+ CONFIGURATIONS Debug Release Minimal
+)
+
 add_subdirectory(configuration)
 add_subdirectory(dss_pinlo)
 add_subdirectory(gluondist)
