--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
-add_executable(utils_test EXCLUDE_FROM_ALL utils.cpp)
+add_executable(utils_test utils.cpp)
 set_target_properties(utils_test PROPERTIES COMPILE_DEFINITIONS UTILS_TEST)
 
+install(TARGETS utils_test
+ RUNTIME DESTINATION bin
+ LIBRARY DESTINATION lib
+ ARCHIVE DESTINATION lib
+ COMPONENT testing
+ CONFIGURATIONS Debug
+)
