--- a/src/hardfactors/CMakeLists.txt
+++ b/src/hardfactors/CMakeLists.txt
@@ -22,4 +22,15 @@ add_executable(hfparser
     ${SOLO_SOURCE_DIR}/utils/utils.cpp)
 target_link_libraries(hfparser gslmuparser interp2d dsspinlo ${LIBS})
 
-install(FILES hardfactors.cfg DESTINATION config/)
+install(TARGETS hfparser
+ RUNTIME DESTINATION bin
+ LIBRARY DESTINATION lib
+ ARCHIVE DESTINATION lib
+ COMPONENT auxiliary_executables
+ CONFIGURATIONS Debug Release
+)
+install(FILES hardfactors.cfg
+ DESTINATION config
+ COMPONENT configuration
+ CONFIGURATIONS Debug Release
+)
