Separate config parsing from Context management and split oneloopcalc.cpp
This commit creates a separate class (and source files) to just read a
configuration file and store the key/value combinations within. The config
file reader doesn't do any parsing or interpreting of the values.
That is now the sole purvey of ContextCollection.

It also splits oneloopcalc.cpp into separate files for the ProgramConfiguration,
ResultsCalculator, and the main program itself, along with a separate header for
the trace variable stuff. There are also some changes to enforce
const-correctness a little more consistently. These are all auxiliary changes
that make it easier to manage the impact of having the configuration parsing
separate from the Context creation.

--- a/src/configuration/CMakeLists.txt
+++ b/src/configuration/CMakeLists.txt
@@ -9,7 +9,9 @@ set(LIBS ${LIBS} m)
 include_directories(${interp2d_SOURCE_DIR} ${quasimontecarlo_SOURCE_DIR})
 
 add_executable(contextreader
+  contextreader.cpp
   context.cpp
+  configuration.cpp
   ${SOLO_SOURCE_DIR}/mstwpdf.cc
   ${SOLO_SOURCE_DIR}/utils/utils.cpp
   ${SOLO_SOURCE_DIR}/coupling.cpp
