--- a/src/gluondist/CMakeLists.txt
+++ b/src/gluondist/CMakeLists.txt
@@ -15,11 +15,12 @@ target_link_libraries(gdist interp2d ${LIBS})
 add_executable(gluondisteval
   gluondist_driver.cpp
   gluondist.cpp
-  ../mstwpdf.cc
-  ../coupling.cpp
-  ../factorizationscale.cpp
-  ../configuration/context.cpp
-  ../utils/utils.cpp)
+  ${SOLO_SOURCE_DIR}/mstwpdf.cc
+  ${SOLO_SOURCE_DIR}/coupling.cpp
+  ${SOLO_SOURCE_DIR}/factorizationscale.cpp
+  ${SOLO_SOURCE_DIR}/configuration/context.cpp
+  ${SOLO_SOURCE_DIR}/configuration/configuration.cpp
+  ${SOLO_SOURCE_DIR}/utils/utils.cpp)
 target_link_libraries(gluondisteval dsspinlo interp2d ${LIBS})
 
 install(TARGETS gdist
