--- a/test/minimal_hardfactors.cfg
+++ b/test/minimal_hardfactors.cfg
@@ -8,22 +8,22 @@ integration = lo
 Fd real = qqfactor * Fq1 / (2 * pi)^2
 
 name = loop-nc-real-dipole
-integration = nlo * polar momentum
+integration = nlo * exact limited momentum
 Jtilde = -2 * dot(kT - xi * (-q1x + kT), xi * q1y, -q1x, -q1y) / (square(kT - xi * (-q1x + kT), xi * q1y) * q12) * Fkq1
 Fn real = qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jtilde
 
 name = loop-nc-virtual-dipole
-integration = nlo * polar momentum
+integration = nlo * exact limited momentum
 Jvtilde = -2 * dot(xi * kT - (-q1x + kT), q1y, -q1x, -q1y) / (square(xi * kT - (-q1x + kT), q1y) * q12) * Fk
 Fd real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
 
 name = loop-nc-real-quadrupole
-integration = nlo * polar momentum
+integration = nlo * exact limited momentum
 Jtilde = -1 / (4 * pi^2) * 2 * dot(kT - xi * (-q1x + kT), xi * q1y, kT - q2x, -q2y) / (square(kT - xi * (-q1x + kT), xi * q1y) * square(kT - q2x, -q2y)) * Fkq1 * Fq2
 Fn real = qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jtilde
 
 name = loop-nc-virtual-quadrupole
-integration = nlo * polar momentum
+integration = nlo * exact limited momentum
 Jvtilde = -1 / (4 * pi^2) * 2 * dot(xi * kT - (-q1x + kT), q1y, q2x - kT + q1x, q2y + q1y) / (square(xi * kT - (-q1x + kT), q1y) * square(q2x - kT + q1x, q2y + q1y)) * Fk * Fq2
 Fd real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
 
