Fix some errors in the testing functions

--- a/test/minimal_hardfactors.cfg
+++ b/test/minimal_hardfactors.cfg
@@ -5,7 +5,7 @@
 # These are qq channel terms only.
 name = tree
 integration = lo
-Fd real = qqfactor * Fq1 / (2 * pi)^2
+Fd real = qqfactor * Fk / (2 * pi)^2
 
 name = loop-nc-real-dipole
 integration = nlo * exact limited momentum
@@ -15,7 +15,7 @@ Fn real = qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jt
 name = loop-nc-virtual-dipole
 integration = nlo * exact limited momentum
 Jvtilde = -2 * dot(xi * kT - (-q1x + kT), q1y, -q1x, -q1y) / (square(xi * kT - (-q1x + kT), q1y) * q12) * Fk
-Fd real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
+Fn real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
 
 name = loop-nc-real-quadrupole
 integration = nlo * exact limited momentum
@@ -25,7 +25,7 @@ Fn real = qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jt
 name = loop-nc-virtual-quadrupole
 integration = nlo * exact limited momentum
 Jvtilde = -1 / (4 * pi^2) * 2 * dot(xi * kT - (-q1x + kT), q1y, q2x - kT + q1x, q2y + q1y) / (square(xi * kT - (-q1x + kT), q1y) * square(q2x - kT + q1x, q2y + q1y)) * Fk * Fq2
-Fd real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
+Fn real = -qqfactor / z2 * alphas * Nc / (4 * pi^2)^2 * (1 + xi2) / (1 - xi) * Jvtilde
 
 loop-nc-dipole = loop-nc-real-dipole + loop-nc-virtual-dipole
 
