Fix term error in test file

--- a/test/all-centered.cfg
+++ b/test/all-centered.cfg
@@ -104,7 +104,7 @@ integration = nlo zero * cartesian momentum
 modifiers = omit xi
 Fk2pq1 = F(square(q1x + 0.5*kT, q1y), Yg)
 Fk2mq1 = F(square(0.5*kT - q1x, -q1y), Yg)
-Fd real = -2*Nf*TR*Sperp*alphas_2pi * ggfactor/z2 * (1 - 2*xi + 2*xi2) * Fk2pq1 * Fk2mq1 * ln(square(q1x + kT*(0.5 - xi), q1y)/kT2)
+Fn real = -2*Nf*TR*Sperp*alphas_2pi * ggfactor/z2 * (1 - 2*xi + 2*xi2) * Fk2pq1 * Fk2mq1 * ln(square(q1x + kT*(0.5 - xi), q1y)/kT2)
 
 name = h112gq.c
 integration = nlo * polar momentum
