Change names of hard factors in test config file

--- a/test/all-centered.cfg
+++ b/test/all-centered.cfg
@@ -23,16 +23,16 @@ Fn real = -4*alphas_2pi*Nc*Sperp * ggfactor/z2 * Fq1 * F(square(q1x+kT, q1y), Yg
 
 h16gg.c = h16gg3.c + h16gg2.c
 
-name = h14qqs.c
+name = h14qq2.c
 integration = nlo * cartesian momentum * cartesian momentum
 Fs real = -Nc/pi*alphas_2pi*Sperp * qqfactor/z2 * (1 + xi2)/xi * (dot(q1x - kT/xi, q1y, q2x - kT, q2y)/(square(q1x - kT/xi, q1y)*square(q2x - kT, q2y))) * Fq1 * Fq2
 
-name = h14qqd.c
+name = h14qq1.c
 integration = nlo zero * cartesian momentum
 modifiers = omit xi
 Fs real = -Nc*alphas_2pi*Sperp * qqfactor/z2 * (1 + xi2) * ln(square(-q1x + xi*kT, -q1y)/kT2) * Fk * Fq1
 
-h14qq.c = h14qqs.c + h14qqd.c
+h14qq.c = h14qq2.c + h14qq1.c
 
 name = h12gg.c
 integration = nlo * polar momentum * polar momentum
